feat(rag-service): run M4 config preflight after corpus gate and map config errors